<resources>
    <string name="app_name">SoftMethProject5</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_york_style_pizza">New York Style Pizza</string>
    <string name="current_orders">Current Orders</string>
    <string name="order_number">Order Number</string>
    <string name="subtotal">Subtotal</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="order_total">Order Total</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="clear_order">Clear Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="select_order">Select Order</string>
    <string name="cancel_order">Cancel Order</string>

    <string name="largeSize">LARGE</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="toppings">Toppings:</string>
    <string name="price">Price:</string>

    <string name="Sausage">Sausage</string>
    <string name="Pepperoni">Pepperoni</string>
    <string name="GreenPepper">GreenPepper</string>
    <string name="Onion">Onion</string>
    <string name="Mushroom">Mushroom</string>
    <string name="BBQChicken">BBQChicken</string>
    <string name="Provolone">Provolone</string>
    <string name="Cheddar">Cheddar</string>
    <string name="Beef">Beef</string>
    <string name="Ham">Ham</string>
    <string name="Pineapple">Pineapple</string>
    <string name="Olive">Olive</string>
    <string name="BuffaloSauce">BuffaloSauce</string>

    <string name="add_pizza">Add Pizza</string>

    <string name="chicago_deluxe">Chicago Style Deluxe</string>
    <string name="chicago_meatzza">Chicago Style Meatzza</string>
    <string name="chicago_bbq">Chicago Style BBQ Chicken</string>
    <string name="chicago_byo">Chicago Style Build Your Own</string>
    <string name="ny_deluxe">NY Style Deluxe</string>
    <string name="ny_meatzza">NY Style Meatzza</string>
    <string name="ny_bbq">NY Style BBQ Chicken</string>
    <string name="ny_byo">NY Style Build Your Own</string>

    <string name="pizza"> Pizza </string>

</resources>