<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="34dp" android:id="@+id/pizza_name"
                android:gravity="center"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="201dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView" android:paddingTop="30dp"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:paddingTop="30dp"
                android:id="@+id/sizeGroup" android:checkedButton="@id/largeButton">
            <RadioButton
                    android:text="@string/small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/smallButton"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mediumButton"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/largeButton"
                    android:layout_weight="1"/>
        </RadioGroup>
        <TextView
                android:text="@string/toppings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:paddingTop="30dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <CheckBox
                    android:text="@string/Sausage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Sausage"
                    android:layout_weight="1" android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Pepperoni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/Pepperoni"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/GreenPepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/GreenPepper"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Onion"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content" android:id="@+id/Onion"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <CheckBox
                    android:text="@string/Mushroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Mushroom"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/BBQChicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/BBQChicken"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Provolone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Provolone"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Cheddar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Cheddar"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <CheckBox
                    android:text="@string/Beef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Beef"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Ham"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Ham"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Pineapple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Pineapple"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/Olive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Olive"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
            <CheckBox
                    android:text="@string/BuffaloSauce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/BuffaloSauce"
                    android:layout_weight="1"
                    android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingTop="30dp">
            <TextView
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:layout_weight="1" android:layout_marginLeft="15dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/pizzaPrice"
                    android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/add_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button"
                android:layout_marginTop="30dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:layout_gravity="center" android:onClick="addPizza"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>