<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CurrentOrderActivity">
    <ListView
            android:layout_width="315dp"
            android:layout_height="283dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.261"
            android:background="#FAF0F0" android:id="@+id/pizzaOrders"/>
    <TextView
            android:text="@string/current_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/currentOrderTitle"
            app:layout_constraintBottom_toTopOf="@+id/pizzaOrders"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.14" android:textSize="34sp" android:textStyle="bold"
            android:textAlignment="center" android:textAllCaps="false"/>
    <Button
            android:text="@string/clear_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/clearOrder"
            android:textAlignment="center"
            android:onClick="clear"
            app:layout_constraintTop_toBottomOf="@+id/pizzaOrders"
            app:layout_constraintStart_toStartOf="@+id/pizzaOrders" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/placeOrder"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@+id/pizzaOrders"
            android:onClick="placeOrder" app:layout_constraintTop_toBottomOf="@+id/orderTotal"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderNum"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderTitle"
            app:layout_constraintBottom_toTopOf="@+id/pizzaOrders" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="20sp"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subtotal"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/pizzaOrders"
            app:layout_constraintTop_toBottomOf="@+id/clearOrder" android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/sales_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/salesTax"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/subtotal"
            app:layout_constraintStart_toStartOf="@+id/pizzaOrders" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/order_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderTotal"
            app:layout_constraintStart_toStartOf="@+id/pizzaOrders"
            app:layout_constraintTop_toBottomOf="@+id/salesTax" android:layout_marginTop="24dp"
            android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>